# ros2_gpt

./: CMakeLists.txt  README.md  launch.xml  package.xml
data/: test_data.txt
ros2_gpt/: __init__.py  _model_initializer.py
scripts/: data_acquisition.py  gpt_input_node.py  gpt_node.py  gpt_node_old.py  train_gpt.py
src/: Input_publisher_node.cpp  gpt_inference_node.py  gpt_trainer_node.py  input_publisher_node.cpp  output_subscriber_node.cpp  train_gpt.py  wikipedia_downloader.py
